Fixed an issue with first portfolio image not center aligning if it only had one image.

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -212,6 +212,7 @@ article {
 }
 
 body.single .entry-content {
+  width: 100%;
   float: left;
   margin: 0 0 30px;
 }
